// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ls output tests should handle ls --color=always output without extra blank lines when using limit 1`] = `
[
  {
    "spans": [
      {
        "bg": null,
        "fg": null,
        "flags": 0,
        "text": "total 224",
        "width": 9,
      },
    ],
  },
  {
    "spans": [
      {
        "bg": null,
        "fg": null,
        "flags": 0,
        "text": "drwxrwxr-x  27 user  staff   864 Nov 26 19:30 ",
        "width": 46,
      },
      {
        "bg": null,
        "fg": "#81a2be",
        "flags": 0,
        "text": ".",
        "width": 1,
      },
    ],
  },
  {
    "spans": [
      {
        "bg": null,
        "fg": null,
        "flags": 0,
        "text": "drwx------  71 user  sta",
        "width": 24,
      },
    ],
  },
  {
    "spans": [
      {
        "bg": null,
        "fg": null,
        "flags": 0,
        "text": "ff  2272 Nov 26 19:44 ",
        "width": 22,
      },
      {
        "bg": null,
        "fg": "#81a2be",
        "flags": 0,
        "text": "..",
        "width": 2,
      },
    ],
  },
  {
    "spans": [
      {
        "bg": null,
        "fg": null,
        "flags": 0,
        "text": "-rw-r--r--   1 user  staff   109 Nov 26 18:15 .gitignore",
        "width": 56,
      },
    ],
  },
]
`;

exports[`ls output tests should handle ls output with smaller rows to avoid blank lines 1`] = `
[
  {
    "spans": [
      {
        "bg": null,
        "fg": null,
        "flags": 0,
        "text": "total 224",
        "width": 9,
      },
    ],
  },
  {
    "spans": [
      {
        "bg": null,
        "fg": null,
        "flags": 0,
        "text": "drwxrwxr-x  27 user  staff   864 Nov 26 19:30 ",
        "width": 46,
      },
      {
        "bg": null,
        "fg": "#81a2be",
        "flags": 0,
        "text": ".",
        "width": 1,
      },
    ],
  },
  {
    "spans": [
      {
        "bg": null,
        "fg": null,
        "flags": 0,
        "text": "drwx------  71 user  sta",
        "width": 24,
      },
    ],
  },
  {
    "spans": [
      {
        "bg": null,
        "fg": null,
        "flags": 0,
        "text": "ff  2272 Nov 26 19:44 ",
        "width": 22,
      },
      {
        "bg": null,
        "fg": "#81a2be",
        "flags": 0,
        "text": "..",
        "width": 2,
      },
    ],
  },
  {
    "spans": [],
  },
]
`;

exports[`ls output tests should preserve ANSI colors in ls output 1`] = `
{
  "spans": [
    {
      "bg": null,
      "fg": null,
      "flags": 0,
      "text": "drwxr-xr-x  3 user  staff  96 Nov 26 16:19 ",
      "width": 43,
    },
    {
      "bg": null,
      "fg": "#81a2be",
      "flags": 0,
      "text": ".git",
      "width": 4,
    },
  ],
}
`;
